sass/layout/_menu.scss
.menu {
    width: auto;
    background-color: $ground_colour;
    text-align: center;
    overflow: hidden;

    &__h2 {
        position: relative;
        display: flex;
        justify-content: space-between;
        padding: 30px 20px;
        margin-top: -64px;
        border-radius: 35px 35px 0px 0px;
        background-color: $ground_colour;
        font-family: 'shrikhand';
        font-size: 1.8rem;


    }

    &__like {
        display: flex;
        font-size: 0.9rem;
        align-items: center;
        justify-content: center;
    }

    &__submenu {
        text-align: left;
        overflow: hidden;


        &--h3 {
            font-family: 'roboto';
            padding: 0px 15px 0px 20px;

            &::after {
                content: "";
                width: 40px;
                display: block;
                height: 3px;
                background-color: $tertiary_colour;
                margin-top: 5px;
                bottom: -5px;
            }
        }

        &__dish {
            width: auto;
            margin: 16px;
            border-radius: 15px;
            box-shadow: 2px 2px 5px 2px #dddddd;
            font-family: 'roboto';
            font-size: 1rem;
            background-color: white;
            display: flex;
            justify-content: space-between;
            overflow: hidden;
            animation: dishAppear .6s;
            animation-timing-function: cubic-bezier(.5, 1.58, .34, .82);
            animation-fill-mode: both;
            transform: scale(0);
            cursor: pointer;

            &--text {
                padding: 10px;
                width: 100%;
                display: flex;
                flex-flow: row wrap;
                align-items: center;
                justify-content: space-between;
                overflow: hidden;

                & :nth-child(1) {
                    flex: 1 100%;
                    margin-right: 0px;
                    overflow: hidden;
                    white-space: nowrap;
                    text-overflow: ellipsis;
                    font-weight: bold;
                    font-size: 1.1rem;
                }

                & :nth-child(2) {
                    width: 80%;
                    overflow: hidden;
                    white-space: nowrap;
                    text-overflow: ellipsis;
                    font-size: 0.85rem;
                }
            }

            &:hover .validation {
                width: 20%;
            }

            &:hover .validation__check {
                transform: rotateZ(360deg);
            }


        }

    }

    &__button {
        border-radius: 30px 30px 30px 30px;
        padding: 15px;
        background: linear-gradient($secondary_colour, $primary_colour);
        border-style: hidden;
        font-size: 1rem;
        color: white;
        box-shadow: 2px 2px 5px 2px #dddddd;
        margin-top: 40px;
        margin-bottom: 40px;
        cursor: pointer;

        &:hover {
            box-shadow: 2px 2px 5px 2px #B9B9B9;
            opacity: 90%;
        }
    }
}


.validation {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 0%;
    overflow: hidden;
    background-color: $tertiary_colour;
    border-radius: 0 15px 15px 0;
    z-index: 3;
    transition-duration: 1s;

    &__check{
        display: flex;
        align-items: center;
        color: white;
        margin: auto;
        font-size: 1.3em;
        overflow: hidden;
        transition-duration: 1s;
    }

}




//function appearance of the menus

@for $i from 0 to 11 {
    .delay-#{$i} {
        animation-delay: #{$i/5}s;
    }
}

@media screen and (min-width: 799px) {
    .menu {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;

        &__h2 {
            flex: 1 0 100%;
        }

        &__submenu {
            width: 33%;
        }

        &__button {
            flex: 1 0 10%;
            justify-content: center;
            display: flex;
            margin-left: 40%;
            margin-right: 40%;
        }
    }
}

